# Onecard

./: ChangeLog.md  LICENSE  README.md
Basic/: CMakeLists.txt  Card.h  Game.c  Game.h  Player.c  Player.h  PlayerCard.c  PlayerCard.h  main.c  main.h
Socket/client/: Makefile
Socket/server/: Makefile
